--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,92 +1,92 @@
 @import "./utils/vars";
 
 .about {
-    background-color: $background_color;
-    padding-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  background-color: $background_color;
+  padding-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .about_title-container {
-    width: 150px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  width: 150px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .about_title {
-    font-family: $support_font;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 37.71px;
-    text-align: center;
-    text-transform: uppercase;
-    color: $alternative_text_color;
+  font-family: $support_font;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 37.71px;
+  text-align: center;
+  text-transform: uppercase;
+  color: $alternative_text_color;
 }
 
 .about_narrative {
-    font-family: $basic-font;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 21.94px;
-    text-align: center;
-    color: $alternative_text_color;
-    text-transform: uppercase;
+  font-family: $basic-font;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21.94px;
+  text-align: center;
+  color: $alternative_text_color;
+  text-transform: uppercase;
 }
 
 .about_description {
-    padding: 0;
-    margin: 0;
-    color: $alternative_text_color;
-    font-family: $basic-font;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 19.44px;
+  padding: 0;
+  margin: 0;
+  color: $alternative_text_color;
+  font-family: $basic-font;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 19.44px;
 
-
-    &::before {
-        content: url(../images/about_image.png);
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
-.about_description-item {
-    padding: 0 50px;
-    margin-bottom: 10px;
-}
-
-.about_description-item:first-child {
-    line-height: 21.12px;
-    margin-top: 30px;
-}
-
-.about_description-item:last-child {
-    margin-bottom: 20px;
-}
-
-.about_button {
+  &::before {
+    content: url(../images/about_image.png);
     display: block;
     margin-left: auto;
     margin-right: auto;
-    color: $primary_text_color;
-    font-family: $basic-font;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 18px;
-    padding: 9px 37px 10px 37px; 
-    background-color: $default_button_color;
-    border: 0 solid transparent;
-    border-radius: 10px;
+  }
+}
 
-    &:hover {
-        background-color: $hover_button_color;
-    }
+.about_description-item {
+  padding: 0 50px;
+  margin-bottom: 10px;
+}
 
-    &:focus {
-        background-color: $hover_button_color;
-        color: $alternative_text_color;
-    }
+.about_description-item:first-child {
+  line-height: 21.12px;
+  margin-top: 30px;
+}
+
+.about_description-item:last-child {
+  margin-bottom: 20px;
+}
+
+.about_button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  color: $primary_text_color;
+  font-family: $basic-font;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18px;
+  padding: 9px 37px 10px 37px;
+  background-color: $default_button_color;
+  border: 0 solid transparent;
+  border-radius: 10px;
+  transition: background-color 300ms, color 300ms;
+
+  &:hover {
+    background-color: $hover_button_color;
+  }
+
+  &:focus {
+    background-color: $hover_button_color;
+    color: $alternative_text_color;
+  }
 }
