--- a/sass/_reviews.scss
+++ b/sass/_reviews.scss
@@ -1,13 +1,12 @@
 @import "./utils/vars";
 
-
 .reviews {
   margin-top: -100px;
-    background-image: url(../images/background_mobile.jpg);
-    background-size: 100vw;
-    height: 100vh;
+  background-image: url(../images/background_mobile.jpg);
+  background-size: 100vw;
+  height: 100vh;
 
-    @media (min-device-pixel-ratio: 2),
+  @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: url(../images/backgroud_mobile@2x.jpg);
@@ -16,9 +15,42 @@
 }
 
 .reviews_slider {
-    display: block;
-    padding: 200px 70px 0 70px;
-    margin-left: auto;
-    margin-right: auto;
-    height: 450px;
+  display: block;
+  padding: 50px 0 0 0;
+  margin-left: auto;
+  margin-right: auto;
+  height: 530px;
+  --swiper-pagination-bottom: 20px;
+  --swiper-pagination-color: #84a178;
+}
+
+.reviews_slider_image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.reviews_slider_text {
+  margin-top: 20px;
+  background-color: $background_color;
+  border: 1px solid transparent;
+  border-radius: 10px;
+  height: 256px;
+  height: 280px;
+  padding: 47px 30px;
+  text-align: center;
+  color: $alternative_text_color;
+  font-family: $basic_font;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 255%;
+}
+
+.reviews_slider_name {
+  margin: 0;
+  text-align: center;
+  font-family: $basic_font;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 186%;
 }
