--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -165,6 +165,7 @@ a {
   font-weight: 600;
   font-size: 14px;
   line-height: 100%;
+  transition: background-color 300ms, color 300ms;
 
   &:hover {
     background-color: $hover_button_color;
