--- a/css/main.css
+++ b/css/main.css
@@ -793,7 +793,7 @@ a {
   margin-top: -100px;
   background-image: url(../images/background_mobile.jpg);
   background-size: 100vw;
-  height: 100vh;
+  height: 1069px;
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .reviews {
