--- a/sass/_reviews.scss
+++ b/sass/_reviews.scss
@@ -4,7 +4,7 @@
   margin-top: -100px;
   background-image: url(../images/background_mobile.jpg);
   background-size: 100vw;
-  height: 100vh;
+  height: 1069px;
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
